# pyraytrace

./: .gitignore  CHANGELOG.txt  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  release.txt  setup.py
.github/workflows/: citation.yaml  docs.yaml  pypi.yaml  test.yaml
doc/: 1-raytrace-basics.ipynb
docs/: 1-raytrace-basics.ipynb  changelog.rst  conf.py  index.rst  pyraytrace.rst
pyray/: __init__.py  pyray.py
pyraytrace/: __init__.py  jupyter_lite_config.json  pyparaxial.py  pyraytrace.py
tests/: test_pyparaxial.py  test_pyraytrace.py
